# TRACKR

./: .gitignore  build.ps1  pyproject.toml  pytest.ini  trackr-backend.spec
python/trackr/: __init__.py  api.py  beatlink_bridge.py  config.py  core.py  db.py  device_bridge.py  run.py  session.py  simulated_source.py  template.py  text_cleaner.py  writer.py
specs/: ELECTRON-MIGRATION-CHECKLIST.md  LOCK_REPORT_TRACKR_PHASE_FINAL.md  PHASES_TRACKR.md  SPEC_TRACKR_CANONICAL.md  TRACKR-SPEC-v2-CURRENT-STATE.md  TRACKR-SPEC-v3-ELECTRON-TARGET.md  UI_WIRING_CONTRACT.md
tests/: test_api.py  test_beatlink_bridge.py  test_config.py  test_core.py  test_device_listener.py  test_real_device_bridge.py  test_session.py  test_simulated_source.py  test_text_cleaner.py  test_utils.py  test_writer.py
tests/fixtures/: sim_deck_changes_and_repeats.json  sim_same_key_no_reschedule.json
trackr-electron/: package-lock.json  package.json  tsconfig.main.json  vite.config.ts
trackr-electron/src/main/: api.ts  cleaner.ts  database.ts  index.ts  output.ts  overlay-server.ts  prolink.ts  session.ts  store.ts  template.ts  tray.ts
trackr-electron/src/preload/: index.ts
trackr-electron/src/renderer/: App.css  App.tsx  globals.d.ts  index.html  trackr-dashboard.jsx  trackr-http-core.ts  tsconfig.json  updater.ts
trackr-prolink-test/: package-lock.json  package.json  test.ts  tsconfig.json
ui/: trackr-dashboard.jsx
ui/trackr-ui/: package-lock.json  package.json  vite.config.ts
ui/trackr-ui/src/: App.css  App.tsx  updater.ts  (+4 more)
ui/trackr-ui/src-tauri/: Cargo.toml  tauri.conf.json
(+25 files in other folders)
