[project]
name = "trackr"
version = "0.9.0"
description = "DJ set track publisher — connects to Pioneer CDJs, publishes now-playing info to OBS overlays"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
trackr = "trackr.run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]
